// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Submenu props :disabled 1`] = `
<ul class="t-submenu t-is-disabled">
  <!---->
  <!---->
</ul>
`;

exports[`Submenu props :name 1`] = `
<ul class="t-submenu">
  <!---->
  <!---->
</ul>
`;

exports[`Submenu slot <default> 1`] = `
<ul class="t-submenu">
  <!---->
  <!---->
</ul>
`;

exports[`Submenu slot <icon> 1`] = `
<ul class="t-submenu">
  <!---->
  <!---->
</ul>
`;

exports[`Submenu slot <title> 1`] = `
<ul class="t-submenu">
  <!---->
  <!---->
</ul>
`;
